--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "displayName": "File Path Opener",
     "description": "Open MD/MDX files from YAML paths and src attributes",
     "version": "1.0.0",
+    "publisher": "fern-api",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fern-api/file-path-opener.git"
+    },
+    "keywords": ["file", "path", "opener", "markdown", "yaml", "mdx", "docs"],
     "engines": {
         "vscode": "^1.60.0"
     },
@@ -33,8 +40,8 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "echo 'No compilation needed for simple JS extension'"
+        "vscode:prepublish": "echo 'Ready to publish - no compilation needed'",
+        "package": "npx @vscode/vsce package"
     },
     "devDependencies": {
         "@types/node": "^16.x"
